# game-engine

./: .clang-format  .gitignore  CMakeLists.txt  Game.cpp  Game.h  devenv.nix  devenv.yaml  scratch
src/: PlayerController.cpp  PlayerController.h  main.cpp
src/Animation/: AnimationManager.cpp  AnimationManager.h
src/Camera/: CameraManager.cpp  CameraManager.h
src/Input/: InputManager.cpp  InputManager.h
src/Input-old/: InputManager.cpp  InputManager.h
src/Math/: MathTypes.h
src/Physics/: PhysicsManager.cpp  PhysicsManager.h
src/Resource/: ResourceManager.cpp  ResourceManager.h
src/Texture/: TextureResource.cpp  TextureResource.h
src/camera/: CameraSystem.h
src/camera/cameras/: BaseCamera.cpp  BaseCamera.h  Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h
src/camera/core/: CameraBounds.cpp  CameraBounds.h  CameraTypes.h  Viewport.cpp  Viewport.h
src/camera/effects/: CameraShake.cpp  CameraShake.h  ShakeConfig.h  ShakePattern.h
src/camera/input/: CameraInputHandler.cpp  CameraInputHandler.h
src/camera/manager/: CameraManager.cpp  CameraManager.h  CameraManagerConfig.h  CameraRegistry.cpp  CameraRegistry.h
src/camera/presets/: FPSCamera.cpp  FPSCamera.h  ISometricCamera.cpp  ISometricCamera.h  IsometricCamera.cpp  IsometricCamera.h  SideSCrollerCamera.cpp  SideSCrollerCamera.h  SideScrollerCamera.cpp  SideScrollerCamera.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h  TopDownCamera.cpp  TopDownCamera.h
src/camera/transitions/: CameraTransition.cpp  CameraTransition.h  TransitionConfig.h  TransitionEasing.cpp  TransitionEasing.h
src/camera/utils/: CameraDebugger.cpp  CameraDebugger.h  CoordinateTransform.cpp  CoordinateTransform.h
src/input/: InputSystem.cpp  InputSystem.h
src/input/core/: InputConfig.h  InputConstants.h  InputEvent.h  InputEventQueue.h  InputMemoryPools.cpp  InputMemoryPools.h  InputSnapshot.h  InputTypes.h
src/input/debug/: InputDebugOverlay.cpp  InputDebugOverlay.h  InputLogger.cpp  InputLogger.h
src/input/manager/: InputLifecycle.cpp  InputLifecycle.h  InputService.cpp  InputService.h
src/input/mapping/: ActionMap.h  BindingResolver.h  ContextStack.cpp  ContextStack.h  InputBinding.h  InputContext.h
src/input/processing/: EventProcessor.cpp  EventProcessor.h  SnapshotManager.cpp  SnapshotManager.h
src/input/utils/: ConfigLoader.cpp  ConfigLoader.h  InputUtils.h
src/math/: MathSystem.h
src/math/animation/: AnimationMath.cpp  AnimationMath.h  DualQuaternion.cpp  DualQuaternion.h
src/math/core/: FastMath.h  MathConstants.h  MathFunctions.h  MathTypes.h
src/math/geometry/: Distance.h  Intersections.h  Primitives.h
src/math/graphics/: ColorSpace.h  ProjectionMatrix.cpp  ProjectionMatrix.h  TangentSpace.cpp  TangentSpace.h
src/math/interpolation/: Curves.h  Easing.h  Interpolation.h
src/math/noise/: PerlinNoise.cpp  PerlinNoise.h  SimplexNoise.cpp  SimplexNoise.h  WorleyNoise.cpp  WorleyNoise.h
src/math/simd/: SimdMath.h  SimdTypes.h
src/math/spatial/: MortonCode.cpp  MortonCode.h  Octree.h  SpatialHash.h
src/math/transform/: Transform.cpp  Transform.h  TransformHierarchy.cpp  TransformHierarchy.h
src/math/utils/: MathDebug.h  Random.cpp  Random.h
src/memory/: MemoryManager.cpp  MemoryManager.h  MemorySystem.h
src/memory/allocators/: CircularBufferAllocator.cpp  CircularBufferAllocator.h  HeapAllocator.cpp  HeapAllocator.h  LinearAllocator.cpp  LinearAllocator.h  PoolAllocator.cpp  PoolAllocator.h  RingBufferAllocator.cpp  RingBufferAllocator.h  StackAllocator.cpp  StackAllocator.h  SystemAllocator.cpp  SystemAllocator.h  TimelineDataAllocator.cpp  TimelineDataAllocator.h  TimerPoolAllocator.cpp  TimerPoolAllocator.h
src/memory/core/: AllocationInfo.h  IAllocator.cpp  IAllocator.h  MemoryStats.h  SystemInfo.h  Types.h
src/memory/manager/: MemoryConfig.h  MemoryManager.cpp  MemoryManager.h  ObjectPool.h
src/memory/utils/: ScopedAllocator.cpp  ScopedAllocator.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/physics/collision/: BroadPhase.cpp  BroadPhase.h  CollisionDetection.cpp  CollisionDetection.h  CollisionFiltering.cpp  CollisionFiltering.h  CollisionShapes.cpp  CollisionShapes.h  NarrowPhase.cpp  NarrowPhase.h
src/physics/constraints/: ConstraintSolver.cpp  ConstraintSolver.h  ConstraintTypes.cpp  ConstraintTypes.h  MotorConstraints.cpp  MotorConstraints.h
src/physics/core/: PhysicsConfig.h  PhysicsConstants.h  PhysicsTypes.cpp  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
src/physics/dynamics/: ForceGenerators.cpp  ForceGenerators.h  Integration.cpp  Integration.h  RigidBody.cpp  RigidBody.h  SoftBody.cpp  SoftBody.h
src/physics/gameplay/: CharacterController.cpp  CharacterController.h  DestructionSystem.cpp  DestructionSystem.h  TriggerSystem.cpp  TriggerSystem.h  VehiclePhysics.cpp  VehiclePhysics.h
src/physics/integration/: BulletIntegration.cpp  BulletIntegration.h  BulletWrappers.cpp  BulletWrappers.h  ComponentBridge.cpp  ComponentBridge.h
src/physics/manager/: PhysicsManager.cpp  PhysicsManager.h  PhysicsProfiler.cpp  PhysicsProfiler.h
src/physics/queries/: PhysicsQueries.cpp  PhysicsQueries.h  RaycastSystem.cpp  RaycastSystem.h
src/physics/streaming/: PhysicsLOD.cpp  PhysicsLOD.h
src/physics/utils/: PhysicsDebug.cpp  PhysicsDebug.h  PhysicsUtils.cpp  PhysicsUtils.h
src/resources/async/: ResourceTask.cpp  ResourceTask.h  ResourceTaskScheduler.cpp  ResourceTaskScheduler.h
src/resources/cache/: ResourceCache.cpp  ResourceCache.h
src/resources/core/: Resource.cpp  Resource.h  ResourceHandle.cpp  ResourceHandle.h  ResourceMetadata.h  ResourceTypes.h
src/resources/loader/: IResourceLoader.cpp  IResourceLoader.h
src/resources/manager/: ResourceFactory.cpp  ResourceFactory.h  ResourceManager.cpp  ResourceManager.h  ResourceRegistry.cpp  ResourceRegistry.h
src/resources/packaging/: ResourceGroup.cpp  ResourceGroup.h  ResourcePackage.cpp  ResourcePackage.h
src/resources/streaming/: StreamableResource.cpp  StreamableResource.h
src/resources/utils/: ResourceDependencyGraph.cpp  ResourceDependencyGraph.h  ResourcePool.h
src/time/timers/: Timer.h  (+8 more)
(+82 files in other folders)
